[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = "0.10.6"
curve25519-dalek = "4.1.3"
dusk-poseidon = "0.40.0"
ed25519-dalek = "2.1.1"
ff = "0.13.0"
hex-literal = "0.4.1"


rand = "0.8.5"
secp256k1 = {version = "0.30.0", features = ["rand", "hashes"]}
sha256 = "1.5.0"
sha3 = "0.10.8"
