[package]
name = "cryptography"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.1"
ark-snark = "0.5.1"
ark-std = "0.5.0"
blake2 = "0.10.6"
bls-signatures = "0.15.0"
curve25519-dalek = "4.1.3"
dusk-poseidon = "0.40.0"
ed25519-dalek = "2.1.1"
ff = "0.13.0"
hex-literal = "0.4.1"


rand = "0.8.5"
rand_core = "0.6.4"
secp256k1 = {version = "0.30.0", features = ["rand", "hashes"]}
sha2 = "0.10.8"
sha256 = "1.5.0"
sha3 = "0.10.8"
x25519-dalek = "2.0.1"
